style.css
@font-face {
    font-family: 'Norse';
    src: url(./fonts/Norse-Bold.woff2) format('woff2'),
        url('./fonts/Norse-Bold.woff') format('woff');
    font-weight: bold;
    font-style: normal;
    font-display: swap;
}


.icon-desc{
    font-family: 'Norse';
}


:root{
    margin: 0;
    padding: 0;
    height: 100vh;
}

*{
    box-sizing: border-box;
}

body{
    display: flex;
    flex-direction: row;
    padding: 0;
    margin: 0;
    height: 100%;
}

.image{
    position: relative;
    height: 100%;
    width: 37.5vw;
}

.image > img{
    height: 100%;
    width: 100%;
}

.icon{
    position:absolute;
    height: 18%;
    top: 22.5%;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 10px;
    background:  rgb(0 0 0 /50%);
    width: 100%;
    
}
.icon > img{
    height: 100%;
}
.icon > p{
    color: white;
    font-size: 120px;
}

.content{
    display: flex;
    flex-direction: column;
    width: 62.5vw;
    height: 100%;
    font-family: sans-serif;

}

.header{
    height: 35%;
    background-color: rgb(248, 248, 248);
    
    padding-top: 100px;
    width : 100%;
}

.header > p{
    font-size: 20px;
    font-weight: bolder;
    margin-left: 80px;
    margin-right: 240px;
    margin-bottom: 45px;
    
}

.input{
    width: 100%;
    display: flex;
    flex-direction: column;
     gap: 28px;
    padding-left: 80px;
    box-shadow: 0 8px 6px -4px rgba(0, 0, 0, 0.3);
}

.user_inputs{
    display: flex;
    flex-direction: column;
    gap: 2px;
}

.names,.contacts,.passwords{
    display: flex;
    gap: 90px;
}

form{
    height: 65%;
}
.container{
    display: flex;
    flex-direction: column;
    height: 100%;
}

input{
    font-size: 16px;
    padding: 6px;
    font-family: sans-serif;
    border: 1px solid  #E5E7EB ;
    border-radius: 5px;
    width: 300px;
}

input:focus{
    border: 2px solid blue;
    box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.15);
}
input:user-invalid{
    border: 2px solid red;
}

 label{
    font-size: 15px;
 }

 h2{
    margin-bottom: 0;
 }

 .passwords{
    margin-bottom: 40px;
 }

 .button{
    display: flex;
    flex-direction: column;
    padding-left: 80px;
    padding-top: 50px;
    background-color: #fbf8f829;
    height: 30%;
    flex-grow: 1;
 }

 .button > button{
    flex-grow: 0;
    font-family: sans-serif;
    width: 230px;
    height: 50px;
    background-color: #596D48;
    border-radius: 10px;
    color: white;
    font-size: 18px;
    font-weight: bold;
    margin-bottom: 25px;
    box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.3);
    border: 2px solid #596D48;
 }

 span{
    color: #596D48;
    font-weight: bold;
 }

